[gd_scene load_steps=15 format=3 uid="uid://cpss2bhdwm8t7"]

[ext_resource type="Script" path="res://core/ui/common/settings/network_settings_menu.gd" id="1_2qdps"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="2_8jmkq"]
[ext_resource type="PackedScene" uid="uid://c6fg6uvng0ovi" path="res://core/systems/input/input_watcher.tscn" id="2_yj01k"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="3_ddyy1"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="3_hbsyi"]
[ext_resource type="PackedScene" uid="uid://d0u3rsa5qpj57" path="res://core/ui/components/subsection_label.tscn" id="4_t7br0"]
[ext_resource type="Resource" uid="uid://iqrotrmq62i6" path="res://assets/state/state_machines/settings_state_machine.tres" id="4_tf04q"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="5_jobhc"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="5_round"]
[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="6_i7u1a"]
[ext_resource type="Resource" uid="uid://2efht48q7i6v" path="res://assets/state/states/settings_network.tres" id="6_ke40f"]
[ext_resource type="Script" path="res://core/systems/input/focus_group_setter.gd" id="7_gnxgo"]
[ext_resource type="PackedScene" uid="uid://d1rjdfxxrdccf" path="res://core/ui/components/text_input.tscn" id="7_qx5i7"]
[ext_resource type="PackedScene" uid="uid://b0cyl6fdqxevn" path="res://core/systems/input/scroller_joystick.tscn" id="9_v6vet"]

[node name="NetworkSettings" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2qdps")

[node name="InputWatcher" parent="." instance=ExtResource("2_yj01k")]
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("3_hbsyi")]
state_machine = ExtResource("4_tf04q")
action = 2
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("5_jobhc")]
state = ExtResource("6_ke40f")

[node name="FocusGroupSetter" type="Node" parent="StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("7_gnxgo")
target = NodePath("../../MarginContainer/VBoxContainer/FocusGroup")
on_signal = "state_entered"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FocusGroup" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("current_focus") instance=ExtResource("2_8jmkq")]
current_focus = NodePath("../RefreshButton")

[node name="NoNetworkLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_t7br0")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Network dependencies not found"
horizontal_alignment = 1

[node name="DisplayLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ddyy1")]
layout_mode = 2
text = "Wireless Network"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WifiLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_t7br0")]
layout_mode = 2
text = "Visible Networks"

[node name="RefreshButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_round")]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh Networks"

[node name="WifiNetworkTree" type="Tree" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
columns = 5
hide_root = true
select_mode = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="WiredLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ddyy1")]
visible = false
layout_mode = 2
text = "Wired Network"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="PopupContainer" type="CenterContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PopupContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme = ExtResource("6_i7u1a")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PopupContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PopupContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WifiPasswordTextInput" parent="MarginContainer/PopupContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_qx5i7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
title = "Password"
description = "Enter the password for this network"
secret = true

[node name="WifiPasswordButton" parent="MarginContainer/PopupContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_round")]
unique_name_in_owner = true
layout_mode = 2
text = "Submit"

[node name="ScrollerJoystick" parent="." instance=ExtResource("9_v6vet")]
